# System-Monitor-Client-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
app/: CMakeLists.txt  main.cpp
lib/include/: Application.hpp
lib/src/: Application.cpp  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
test/: ApplicationTest.cpp  CMakeLists.txt
